# Operating-Systems

./: .gitignore  Cargo.toml
lab2/: Cargo.toml
lab2/src/: main.rs
lab3/: Cargo.toml
lab3/src/: barriers.rs  co_variable.rs  mutexes.rs  semaphores.rs  signals.rs
lab4/: Cargo.toml
lab4/src/: main.rs  worker.rs
lab5/: Cargo.toml
lab5/maps/: map_69451_2025-04-04_17:12:57.txt  map_69451_2025-04-04_17:13:27.txt  map_69451_2025-04-04_17:13:58.txt  map_69451_2025-04-04_17:14:28.txt  map_69451_2025-04-04_17:14:58.txt  map_69451_2025-04-04_17:15:28.txt  map_69451_2025-04-04_17:15:59.txt  map_69451_2025-04-04_17:16:29.txt  map_69451_2025-04-04_17:16:59.txt  map_69451_2025-04-04_17:17:29.txt
lab5/src/: run_bash.sh  task1.rs  task2.rs  task3.rs  task4.py
src/: main.rs
